--- a/src/App.css
+++ b/src/App.css
@@ -70,3 +70,22 @@ footer a {
   font-family: "Comic Sans MS", cursive, sans-serif;
   margin-left: 10px;
 }
+
+.page {
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.jumbotron {
+  background-image: url("./images/banner-bg.jpg");
+  background-size: cover;
+}
+
+.cardImage {
+  border-radius: 55;
+  height: 6rem;
+}
+.card {
+  padding: 3em;
+}
