--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,19 @@ footer a {
   border-radius: 55;
   height: 6rem;
 }
-.card {
-  padding: 3em;
+.card-deck .card {
+  margin-left: 15px;
+  padding: 2em;
+  margin-right: 15px;
+}
+.card-deck .card:not(:last-child) {
+  margin-right: 15px;
+}
+.card-deck .card:not(:first-child) {
+  margin-left: 15px;
+}
+.card-deck {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: .5rem;
 }
