--- a/src/App.css
+++ b/src/App.css
@@ -37,10 +37,8 @@ a:hover {
   height: 6rem;
 }
 .card-deck .card {
-  margin-left: 15px;
   padding: 2em;
-  margin-right: 15px;
-}
+}s
 .card-deck .card:not(:last-child) {
   margin-right: 15px;
 }
@@ -49,14 +47,23 @@ a:hover {
 }
 .card-deck {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(160px, 4fr));
   grid-gap: .5rem;
+  margin-right: 5%;
+  margin-left: 5%;
+}
+.icon:first-child {
+  float: left;
+}
+.icon:last-child {
+  float: right;
 }
 
 /* Profile */
 .page {
   font-family: "Comic Sans MS", cursive, sans-serif;
-  margin-left: 10px;
+  margin-left: 10%;
+  margin-right: 10%;
   margin-top: 10px;
 }
 
